--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "axios": "^0.16.2",
     "bulma": "0.5.3",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
