--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mern",
+  "name": "woosreads",
   "version": "1.0.0",
-  "description": "Mern Demo",
+  "description": "Woosley Family Reading List",
   "main": "server.js",
   "scripts": {
     "server": "node server.js",
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "express": "^4.15.4",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "mongoose": "^4.12.1"
   }
 }
