--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "express": "^4.15.4",
-    "react-router-dom": "^4.2.2",
-    "mongoose": "^4.12.1"
+    "moment": "^2.19.1",
+    "mongoose": "^4.12.1",
+    "react-router-dom": "^4.2.2"
   }
 }
