--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^3.5.0",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "riek": "^1.1.0"
   },
   "dependencies": {
     "express": "^4.15.4",
     "moment": "^2.19.1",
     "mongoose": "^4.12.1",
+    "react-edit-inline": "^1.0.8",
     "react-router-dom": "^4.2.2"
   }
 }
