--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "express": "^4.15.4",
     "moment": "^2.19.1",
     "mongoose": "^4.12.1",
+    "react-date-picker": "^6.2.2",
+    "react-datepicker": "^0.60.2",
     "react-edit-inline": "^1.0.8",
     "react-router-dom": "^4.2.2"
   }
